--- a/v1/advanced/index.html
+++ b/v1/advanced/index.html
@@ -84,6 +84,11 @@
           <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/stats/merchants/">Stats</a><span class="icon-arrow-right"></span></li>
         </ul>
+
+        <h1>Reseller Calls</h1>
+        <ul>
+          <li><a href="/v3/resellers/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
+        </ul>
       </nav>
 
       <div class="content col9">
@@ -96,58 +101,50 @@
 <p>Additional deal operations</p>
 
 <ul>
-  <li>
+<li>
 <a href="/v1/deals/">Deals</a>
     <ul>
-      <li><a href="/v1/deals/discussions/">Deal Discussions</a></li>
+<li><a href="/v1/deals/discussions/">Deal Discussions</a></li>
     </ul>
-  </li>
-</ul>
-
-<h2 id="purchases">Purchases</h2>
+</li>
+</ul><h2 id="purchases">Purchases</h2>
 
 <p>Additional purchase operations</p>
 
 <ul>
-  <li><a href="/v1/purchases/">Purchases</a></li>
-</ul>
-
-<h2 id="sessions">Sessions</h2>
+<li><a href="/v1/purchases/">Purchases</a></li>
+</ul><h2 id="sessions">Sessions</h2>
 
 <p>User session operations</p>
 
 <ul>
-  <li>
+<li>
 <a href="/v1/sessions/">Sessions</a>
     <ul>
-      <li><a href="/v1/sessions/leads/">Session Leads</a></li>
+<li><a href="/v1/sessions/leads/">Session Leads</a></li>
     </ul>
-  </li>
-</ul>
-
-<h2 id="regions">Regions</h2>
+</li>
+</ul><h2 id="regions">Regions</h2>
 
 <p>Additional operations by region</p>
 
 <ul>
-  <li>
+<li>
 <a href="/v1/regions/">Regions</a>
     <ul>
-      <li><a href="/v1/regions/deals/">Region Deals</a></li>
+<li><a href="/v1/regions/deals/">Region Deals</a></li>
       <li><a href="/v1/regions/activity/">Region Activity</a></li>
     </ul>
-  </li>
-</ul>
-
-<h2 id="users">Users</h2>
+</li>
+</ul><h2 id="users">Users</h2>
 
 <p>Additional user operations</p>
 
 <ul>
-  <li>
+<li>
 <a href="/v1/users/">Users</a>
     <ul>
-      <li><a href="/v1/users/access_tokens/">User Tokens</a></li>
+<li><a href="/v1/users/access_tokens/">User Tokens</a></li>
       <li><a href="/v1/users/card_links/">User Card Links</a></li>
       <li><a href="/v1/users/coupons/">User Coupons</a></li>
       <li><a href="/v1/users/credit_cards/">User Credit Cards</a></li>
@@ -157,25 +154,20 @@
       <li><a href="/v1/users/shipping_addresses/">User Shipping Addresses</a></li>
       <li><a href="/v1/users/subscriptions/">User Subscriptions</a></li>
     </ul>
-  </li>
-</ul>
-
-<h2 id="targeted-emails">Targeted Emails</h2>
+</li>
+</ul><h2 id="targeted-emails">Targeted Emails</h2>
 
 <p>Marketing email operations</p>
 
 <ul>
-  <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a></li>
-</ul>
-
-<h2 id="stats">Stats</h2>
+<li><a href="/v1/targeted_emails/batches/">Targeted Emails</a></li>
+</ul><h2 id="stats">Stats</h2>
 
 <p>Stats information operations</p>
 
 <ul>
-  <li><a href="/v1/stats/merchants/">Stats</a></li>
+<li><a href="/v1/stats/merchants/">Stats</a></li>
 </ul>
-
       </div>
 
     </div>
