--- a/v1/changelog/index.html
+++ b/v1/changelog/index.html
@@ -84,6 +84,11 @@
           <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/stats/merchants/">Stats</a><span class="icon-arrow-right"></span></li>
         </ul>
+
+        <h1>Reseller Calls</h1>
+        <ul>
+          <li><a href="/v3/resellers/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
+        </ul>
       </nav>
 
       <div class="content col9">
@@ -104,11 +109,8 @@
 <h3 id="expected-changes">Expected Changes</h3>
 
 <ul>
-  <li>Stuff here</li>
-</ul>
-
-<h2 id="breaking-changes">Breaking Changes</h2>
-
+<li>Stuff here</li>
+</ul><h2 id="breaking-changes">Breaking Changes</h2>
       </div>
 
     </div>
