--- a/v1/regions/index.html
+++ b/v1/regions/index.html
@@ -84,17 +84,20 @@
           <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/stats/merchants/">Stats</a><span class="icon-arrow-right"></span></li>
         </ul>
+
+        <h1>Reseller Calls</h1>
+        <ul>
+          <li><a href="/v3/resellers/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
+        </ul>
       </nav>
 
       <div class="content col9">
         <h1 id="regions">Regions</h1>
 
 <ul>
-  <li><a href="/v1/regions/#get-a-region">Get a region</a></li>
+<li><a href="/v1/regions/#get-a-region">Get a region</a></li>
   <li><a href="/v1/regions/#list-all-regions">List all regions</a></li>
-</ul>
-
-<h2 id="get-a-region">Get a region</h2>
+</ul><h2 id="get-a-region">Get a region</h2>
 
 <pre><code>GET /api/v1/regions/:region_id
 </code></pre>
@@ -132,7 +135,6 @@
     <span class="p">}</span>
   <span class="p">]</span>
 <span class="p">}</span></code></pre>
-
       </div>
 
     </div>
