--- a/v1/stats/merchants/index.html
+++ b/v1/stats/merchants/index.html
@@ -84,16 +84,19 @@
           <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/stats/merchants/">Stats</a><span class="icon-arrow-right"></span></li>
         </ul>
+
+        <h1>Reseller Calls</h1>
+        <ul>
+          <li><a href="/v3/resellers/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
+        </ul>
       </nav>
 
       <div class="content col9">
         <h1 id="merchants">Merchants</h1>
 
 <ul>
-  <li><a href="/v1/stats/merchants#merchants">Get merchant stats</a></li>
-</ul>
-
-<h2 id="get-merchant-stats">Get merchant stats</h2>
+<li><a href="/v1/stats/merchants#merchants">Get merchant stats</a></li>
+</ul><h2 id="get-merchant-stats">Get merchant stats</h2>
 <p>Returns a csv file of all the merchants.</p>
 
 <pre><code>GET /stats/merchants
@@ -102,7 +105,6 @@
 <h3 id="response">Response</h3>
 
 <pre class="headers"><code>Status: 200 OK</code></pre>
-
       </div>
 
     </div>
