--- a/v1/users/coupons/index.html
+++ b/v1/users/coupons/index.html
@@ -84,17 +84,20 @@
           <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/stats/merchants/">Stats</a><span class="icon-arrow-right"></span></li>
         </ul>
+
+        <h1>Reseller Calls</h1>
+        <ul>
+          <li><a href="/v3/resellers/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
+        </ul>
       </nav>
 
       <div class="content col9">
         <h1 id="user-coupons">User Coupons</h1>
 
 <ul>
-  <li><a href="/v1/users/coupons/#list-all-users-coupons">List all user’s coupons</a></li>
+<li><a href="/v1/users/coupons/#list-all-users-coupons">List all user’s coupons</a></li>
   <li><a href="/v1/users/coupons/#redeem-a-coupon">Redeem a coupon</a></li>
-</ul>
-
-<h2 id="list-all-users-coupons">List all user’s coupons</h2>
+</ul><h2 id="list-all-users-coupons">List all user’s coupons</h2>
 <p>Returns an array of coupon representations.</p>
 
 <pre><code>GET /users/:user_id/coupons
@@ -103,7 +106,7 @@
 <h3 id="parameters">Parameters</h3>
 
 <dl>
-  <dt>filter (optional)</dt>
+<dt>filter (optional)</dt>
   <dd>
 <em>String</em> Filter the list according to applicable filters (comma-separated).  These include: “valid”, “redeemed”, “expired”.</dd>
   <dt>count (optional)</dt>
@@ -115,9 +118,7 @@
   <dt>page (optional)</dt>
   <dd>
 <em>Integer</em> Returns the list corresponding to the page number if the result cannot be displayed in a single page.  Default is 1.</dd>
-</dl>
-
-<h3 id="response">Response</h3>
+</dl><h3 id="response">Response</h3>
 
 <pre class="headers"><code>Status: 200 OK</code></pre>
 
@@ -128,7 +129,8 @@
       <span class="s2">"id"</span><span class="o">:</span> <span class="s2">"a21c5452d8"</span><span class="p">,</span>
       <span class="s2">"expires_at"</span><span class="o">:</span> <span class="kc">null</span><span class="p">,</span>
       <span class="s2">"created_at"</span><span class="o">:</span> <span class="s2">"Fri Dec 16 19:14:55 UTC 2011"</span><span class="p">,</span>
-      <span class="s2">"barcode"</span><span class="o">:</span> <span class="s2">"19435755354"</span><span class="p">,</span>
+      <span class="s2">"qr_code_url"</span><span class="o">:</span> <span class="s2">"http://domain/coupon/qr_code/ab231c9e"</span><span class="p">,</span>
+      <span class="s2">"qr_code"</span><span class="o">:</span> <span class="s2">"apaosidnqw4tdsdpqi45jf091835ukdfq3-40695.kfmdg-q09i6m'ldfi8nqk6"</span><span class="p">,</span>
       <span class="s2">"state"</span><span class="o">:</span> <span class="s2">"valid"</span><span class="p">,</span>
       <span class="s2">"redemption_code"</span><span class="o">:</span> <span class="kc">null</span><span class="p">,</span>
       <span class="s2">"redeemed_at"</span><span class="o">:</span> <span class="kc">null</span><span class="p">,</span>
@@ -154,14 +156,14 @@ PUT /coupons/:coupon_id/redeem
     <span class="s2">"id"</span><span class="o">:</span> <span class="s2">"a21c5452d8"</span><span class="p">,</span>
     <span class="s2">"expires_at"</span><span class="o">:</span> <span class="kc">null</span><span class="p">,</span>
     <span class="s2">"created_at"</span><span class="o">:</span> <span class="s2">"Fri Dec 16 19:14:55 UTC 2011"</span><span class="p">,</span>
-    <span class="s2">"barcode"</span><span class="o">:</span> <span class="s2">"19435755354"</span><span class="p">,</span>
+    <span class="s2">"qr_code_url"</span><span class="o">:</span> <span class="s2">"http://domain/coupon/qr_code/ab231c9e"</span><span class="p">,</span>
+    <span class="s2">"qr_code"</span><span class="o">:</span> <span class="s2">"apaosidnqw4tdsdpqi45jf091835ukdfq3-40695.kfmdg-q09i6m'ldfi8nqk6"</span><span class="p">,</span>
     <span class="s2">"state"</span><span class="o">:</span> <span class="s2">"redeemed"</span><span class="p">,</span>
     <span class="s2">"redemption_code"</span><span class="o">:</span> <span class="kc">null</span><span class="p">,</span>
     <span class="s2">"redeemed_at"</span><span class="o">:</span> <span class="s2">"Fri Dec 16 21:14:55 UTC 2011"</span><span class="p">,</span>
     <span class="s2">"print_url"</span><span class="o">:</span> <span class="s2">"http://domain/coupons/a21c5452d8/print"</span>
   <span class="p">}</span>
 <span class="p">}</span></code></pre>
-
       </div>
 
     </div>
