--- a/v1/core/index.html
+++ b/v1/core/index.html
@@ -84,6 +84,11 @@
           <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/stats/merchants/">Stats</a><span class="icon-arrow-right"></span></li>
         </ul>
+
+        <h1>Reseller Calls</h1>
+        <ul>
+          <li><a href="/v3/resellers/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
+        </ul>
       </nav>
 
       <div class="content col9">
@@ -96,17 +101,14 @@
 <p>Use this call to get a list of deals currently available for sale.</p>
 
 <ul>
-  <li><a href="/v1/get_deals/">Get Deals</a></li>
-</ul>
-
-<h2 id="execute-purchases">Execute Purchases</h2>
+<li><a href="/v1/get_deals/">Get Deals</a></li>
+</ul><h2 id="execute-purchases">Execute Purchases</h2>
 
 <p>Use this call to make deal purchases. </p>
 
 <ul>
-  <li><a href="/v1/full_purchase/">Execute Purchases</a></li>
+<li><a href="/v1/full_purchase/">Execute Purchases</a></li>
 </ul>
-
       </div>
 
     </div>
