--- a/v1/errors/index.html
+++ b/v1/errors/index.html
@@ -84,6 +84,11 @@
           <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/stats/merchants/">Stats</a><span class="icon-arrow-right"></span></li>
         </ul>
+
+        <h1>Reseller Calls</h1>
+        <ul>
+          <li><a href="/v3/resellers/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
+        </ul>
       </nav>
 
       <div class="content col9">
@@ -100,7 +105,7 @@
 <h2 id="http-status-code-summary">HTTP Status Code Summary</h2>
 
 <ul>
-  <li>
+<li>
     <p><b>200</b> OK - Everything worked as expected.</p>
   </li>
   <li>
@@ -124,12 +129,10 @@
   <li>
     <p><b>500, 502, 503, 504</b> Server errors - something went wrong on an OfferEngine server.</p>
   </li>
-</ul>
-
-<h2 id="error-types">Error Types</h2>
+</ul><h2 id="error-types">Error Types</h2>
 
 <ul>
-  <li>
+<li>
     <p><b>auth_failed</b> - key provided does not match an active api key</p>
   </li>
   <li>
@@ -150,9 +153,7 @@
   <li>
     <p><b>redeem_failed</b> - voucher could not be found or is already redeemed</p>
   </li>
-</ul>
-
-<h2 id="error-message">Error Message</h2>
+</ul><h2 id="error-message">Error Message</h2>
 
 <p>Field providing a human readable explanation of the error that occurred </p>
 
@@ -175,7 +176,6 @@
   <span class="s2">"error_type"</span><span class="o">:</span> <span class="s2">"find_failed"</span><span class="p">,</span>
   <span class="s2">"error_msg"</span><span class="o">:</span> <span class="s2">"Unable to find"</span>
 <span class="p">}</span></code></pre>
-
       </div>
 
     </div>
