--- a/v1/authentication/index.html
+++ b/v1/authentication/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/x-icon" href="http://media.deem.com/designimages/deemsmb_favicon.ico" />
   <link rel="shortcut icon" type="image/x-icon" href="http://media.deem.com/designimages/deemsmb_favicon.ico" />
 
-  <title>Authentication - OfferEngine API</title>
+  <title>V1 Authentication - OfferEngine API</title>
 
   <link href="/shared/css/documentation.css" rel="stylesheet" />
   <link href="/shared/css/pygments.css" rel="stylesheet" />
@@ -50,7 +50,7 @@
         <h1>Introduction</h1>
         <ul>
           <li><a href="/">Overview</a><span class="icon-arrow-right"></span></li>
-          <li><a href="/v1/authentication/">Authentication</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v1/authentication/">V1 Authentication</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/errors/">Errors</a><span class="icon-arrow-right"></span></li>
         </ul>
 
@@ -59,13 +59,13 @@
           <li><a href="/v1/quick_start/">Quick Start</a><span class="icon-arrow-right"></span></li>
         </ul>
 
-        <h1>Core Calls</h1>
+        <h1>V1 Core Calls</h1>
         <ul>
           <li><a href="/v1/get_deals/">Get Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/full_purchase/">Execute Purchases</a><span class="icon-arrow-right"></span></li>
         </ul>
 
-        <h1>Additional Calls</h1>
+        <h1>V1 Additional Calls</h1>
         <ul>
           <li><a href="/v1/adunits/">Ad Units</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/deals/">Deals</a><span class="icon-arrow-right"></span></li>
@@ -85,9 +85,10 @@
           <li><a href="/v1/stats/merchants/">Stats</a><span class="icon-arrow-right"></span></li>
         </ul>
 
-        <h1>Reseller Calls</h1>
+        <h1>V3 Additional Calls</h1>
         <ul>
-          <li><a href="/v3/resellers/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v3/authentication/">V3 Authentication</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v3/resellers/purchases/">Reseller Purchases</a><span class="icon-arrow-right"></span></li>
         </ul>
       </nav>
 
