--- a/v3/resellers/purchases/index.html
+++ b/v3/resellers/purchases/index.html
@@ -190,7 +190,7 @@ though they may have little to no meaning for some requests.</p>
   <dt>telephone</dt>
   <dd>
 <em>String</em> The telephone number of the user that made the purchase</dd>
-</dl><h3 id="reseller-purchases-request-example">Reseller purchases Request Example</h3>
+</dl><h3 id="card-linked-request-example">Card Linked Request Example</h3>
 
 <pre class="headers"><code>POST https://&lt;username&gt;:&lt;password&gt;@api.offers.deem.com/v3/resellers/purchases.json</code></pre>
 
